Added application logo with transition effect. Tweaks to about page

--- a/About.html
+++ b/About.html
@@ -23,9 +23,10 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <div id="logo">
+                <div class="logo-container">
                     <h1 class="title"><a href="index.html">PAST - Pfizer Analytical Support Tool </a></h1>
                     <span class="release-version">Release v1.0 Alpha</span>
+                    <img class="logo logo-transition" alt="logo" src="/img/logo-128x128.png">
                 </div>
                 <nav class="navigation">
                     <ul>
@@ -49,7 +50,7 @@
                     </header>
                     <section>
                         <h2>Pfizer Analytical Support Tool</h2>
-                        <h3>A T.E.D. Project</h3>
+                        <h3>A T.E.D. Project</h3>                        
                     </section>
                 </article>
                 <article class="logs">
