Modified Report page

--- a/Reports.html
+++ b/Reports.html
@@ -42,10 +42,11 @@
         <div class="main-content">
             <div class="main wrapper clearfix">
                 <!-- render body here -->
-                <div class="report">
-                    <section>
-                        <img src="img/GA_Home_Hero_01_dashboard.png" alt="image">
-                    </section>
+                <div class="report-container">
+                    <div><p>PAC Report</p></div>
+                    <div><p>Samples Report</p></div>
+                    <div><p>CCUI Report</p></div>
+                    <div><p>General Statistics for today</p></div>
                 </div>
 
                 <!-- render body here -->
