Search container implementation

--- a/LogViewer.html
+++ b/LogViewer.html
@@ -65,11 +65,27 @@
 
             <div id="search-container">
                 <ul>
+                    <li>
+                        <input class="keyword" type="text" placeholder="type a keyword" />
+                    </li>
+                    <li>
+                        <select>
+                        <option>All</option>
+                        <option>Info</option>
+                        <option>Warning</option>
+                        <option>Error</option>
+                        </select>
+                    </li>
+                    <li><input type="date" placeholder="9/16/2013" /></li>
+                    <li><input type="date" placeholder="9/17/2013" /></li>    
+                </ul>
+
+                <!--<ul>
                     <li><span id="application-select" data-index="eSamples">Pac</span></li>
                     <li><span>Prod</span></li>
                     <li> <input type="text" id="keyword" /> </li>
                     <li><datalist></datalist></li>
-                </ul>
+                </ul>-->
                 <img class="go" src="img/go.png" alt="go">
             </div>
             <div id="grid-container">
